# Legal-Q-A-Engine

./: README.md  legal_qa_full_architecture.html
backend/: README.md  config.py  docker-compose.yml  pyproject.toml  requirements.txt  run.py
backend/api/: main.py
backend/db/: models.py  session.py
backend/graph/: state.py
backend/ingestion/: chunker.py  embedder.py  ingest.py  loader.py
backend/memory/: case_profile.py  semantic.py  short_temp.py
backend/prompts/: domain_prompts.py
backend/retrieval/: authority.py  hybrid.py  reranker.py
