[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "alembic==1.13.3",
    "fastapi==0.115.0",
    "httpx==0.27.2",
    "langchain==0.2.16",
    "langchain-community==0.2.16",
    "langchain-ollama==0.1.3",
    "langchain-postgres==0.0.12",
    "langgraph==0.2.28",
    "pgvector==0.2.5",
    "psycopg2-binary==2.9.9",
    "pydantic==2.9.2",
    "pydantic-settings==2.5.2",
    "pymupdf==1.24.10",
    "python-docx==1.1.2",
    "python-dotenv",
    "python-multipart==0.0.12",

    "rank-bm25==0.2.2",
    "sqlalchemy==2.0.35",
    "uvicorn[standard]==0.30.6",
]
